Fixed that overflow bug idk how but fixed

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  width: 100dvw;
+  height: 100dvh;
+}
+
 #root {
   -webkit-app-region: drag;
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
 .no-drag {
